Issue and change fixed following points
- Add chatbot logo in header
- Welcome message is not showing up when user scroll
- Chatbot Exapand option
- unnessessary space between messages

--- a/src/ChatWidget/cogniwide-chatwidget.css
+++ b/src/ChatWidget/cogniwide-chatwidget.css
@@ -55,11 +55,20 @@
     opacity: 1;
 }
 
-.cogniwidechat .close svg {
+.cogniwidechat .close svg, .cogniwidechat .expand svg {
     stroke: #fff;
     fill: #fff;
 }
+.cogniwidechat .expand svg {
+    opacity: 0.80;
+}
 
+.cogniwidechat .expand svg:hover{
+ opacity: 0.75;
+}
+.cogniwidechat .expand {
+    margin: 5px 5px 0 0;
+}
 .cogniwidechat .restart span {
     cursor: pointer;
     background-size: 15px;
@@ -200,7 +209,7 @@
     right: 0;
     bottom: 0;
     width: 100%;
-    margin-bottom: 70px;
+    margin-bottom: 100px;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     transition: all 1s ease-in-out;
@@ -261,6 +270,7 @@
 }
 
 .cogniwidechat pre {
+    background: transparent;
     position: absolute;
     cursor: pointer;
     width: 35px;
@@ -275,6 +285,7 @@
     background-position: center;
     background-size: 22px;
     opacity: 0.6;
+    /* background: transparent; */
 }
 .cogniwidechat pre.send-active{
     opacity: 1;
@@ -296,6 +307,7 @@
     background-position: center;
     background-size: 22px;
     opacity: 0.6;
+    /* background: transparent; */
 }
 
 .cogniwidechat pre.cal-btn {
@@ -313,6 +325,7 @@
     background-position: center;
     background-size: 22px;
     opacity: 0.6;
+    /* background: transparent; */
 }
 
 .cogniwidechat .shaddow {
@@ -320,10 +333,10 @@
 }
 
 .cogniwidechat .chat li.left {
-    margin-bottom: 4px;
+    margin-bottom: 10px;
     display: inline-block;
     position: relative;
-    padding: 8px 0;
+    padding: 0;
 }
 
 .cogniwidechat .chat li.left span.timeStamp {
@@ -333,6 +346,7 @@
     font-size: 12px;
     font-weight: 400;
     color: #808080c9;
+    padding-top: 4px;
 }
 
 .cogniwidechat .chat li.right {
@@ -442,6 +456,9 @@
         height: 100%;
         bottom: 0;
         z-index: 9999999999999;
+    }
+    .cogniwidechat .chat-heading{
+        width: 240px !important;
     }
 }
 
@@ -619,15 +636,16 @@ animation-name: fadeInUp;
     margin-top: 45px;
     width: 100%;
     max-width: 100%;
-    font-size: 25px;
     height: auto;
-    color: white;
     padding: 15px;
     text-shadow: 2px 2px 2px #000;
     position: relative;
     /* z-index: -1; */
 }
-
+.cogniwidechat .banner h3{
+    font-size: 25px;
+    color: white;
+}
 
 /* new style add */
 .cogniwidechat .badge-pill{
@@ -825,7 +843,7 @@ animation-name: fadeInUp;
      background: #fff;
      padding: 10px 20px;
      box-shadow: rgba(43, 45, 56, 0.15) 0px 0px 7px 0px !important;
-     max-width: 300px;
+     width: 300px;
      margin-left: 5px;
 }
 .cogniwidechat .power-by {
@@ -866,3 +884,25 @@ animation-name: fadeInUp;
   .cogniwidechat .chat-body ul {
     padding: 20px 15px;
 }
+
+/* Max Window style */
+.cogniwidechat.full-screen .chat_box_container{
+    width: 100%;
+    right: 0;
+    top: 0;
+    max-height: 100%;
+    height: 100%;
+  
+
+}
+.cogniwidechat.full-screen .panel-body ul.chat{
+ max-width: 100%;
+ /* display: inline-block; */
+}
+.cogniwidechat.full-screen .chat li.left{
+    display: block;
+}
+.cogniwidechat.full-screen .chat li.left span.timeStamp{
+    right: auto;
+    left: 40px;
+  }
